+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.4.3a0?
=============================

*Release date: XX-XX-200X*

Extension Modules
-----------------

- Fix parse errors in the readline module when compiling without threads.


What's New in Python 2.4.2 final?
=================================

*Release date: 28-SEP-2005*

Extension Modules
-----------------

- Patches #1298449 and #1298499: Add some missing checks for error
  returns in cStringIO.c.

- Patch #1297028: fix segfault if call type on MultibyteCodec,
  MultibyteStreamReader, or MultibyteStreamWriter.

Tests
-----

- Fixed failure in test_macfs on Mac OS X 10.4 (Tiger), which
  apparently doesn't allow the creation time to be set later than the
  modification time.  Fixed by changing the test data.

Build
-----

- The Windows .msi files are now compressed using lzx:21. This produces a 
  significantly smaller installer.


What's New in Python 2.4.2c1?
=============================

*Release date: 21-SEP-2005*

Core and builtins
-----------------

- SF bug #1163563: the original fix for bug #1010677 ("thread Module
  Breaks PyGILState_Ensure()") broke badly in the case of multiple
  interpreter states; back out that fix and do a better job (see
  http://mail.python.org/pipermail/python-dev/2005-June/054258.html
  for a longer write-up of the problem).

- On 64-bit platforms, when __len__() returns a value that cannot be
  represented as a C int, raise OverflowError.

- SF bug #893549: parsing keyword arguments was broken with a few format
  codes.

- Changes donated by Elemental Security to make it work on AIX 5.3
  with IBM's 64-bit compiler (SF patch #1284289).  This also closes SF
  bug #105470: test_pwd fails on 64bit system (Opteron).

- Changes donated by Elemental Security to make it work on HP-UX 11 on
  Itanium2 with HP's 64-bit compiler (SF patch #1225212).
